scrollbar fix

--- a/style.css
+++ b/style.css
@@ -49,17 +49,12 @@ body {
 
 * {scrollbar-width: thin;}
 scrollbar {width:5px;height:5px;}
-::-webkit-scrollbar {width:5px;height:5px; cursor: pointer !important;}
-/* ::-webkit-scrollbar-thumb {background: var(--colorTrue);}
-::-webkit-scrollbar-track {background: rgba(0,0,0,0.1);}
-::-webkit-scrollbar {width:7px; cursor:pointer;} */
-::-webkit-scrollbar-track {background: #f1f1f1;}
-::-webkit-scrollbar-thumb {background: #888; border-radius:3px; cursor: grab !important;}
-/* ::-webkit-scrollbar-thumb:hover {cursor:grab;} */
-::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar {width:5px;height:5px;}
+::-webkit-scrollbar-track {background: var(--background-color);}
+::-webkit-scrollbar-thumb {background: #888; border-radius:3px;}
+/* ::-webkit-scrollbar-thumb:hover {
   background-color: #424242;
-  cursor: pointer !important;
-}
+} */
 
 .hidden {display: none !important;}
 
